--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,39 @@
-<nav class="navbar navbar-expand-sm bg-light">
-  <!-- <div class="container-fluid"> -->
-    <!-- <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div> -->
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" routerLink="Home" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="Proyectos" href="#">Proyectos</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="Quienes" href="#">Quienes Somos</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="Contacto" href="#">Contacto</a></li>
-    </ul>
-  <!-- </div> -->
-</nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <div class="col" style="text-align: center;">
+    <h1>{{titulo}}</h1>
+    <br><br>
+    <form class="form-group row">
+      <div class="form-group col-md-3">
+        <label for="nombre">Nombre:</label>
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="apellido">Apellido:</label>
+        <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"[(ngModel)]="cuadroApellido">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="cargo">Cargo:</label>
+        <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control"[(ngModel)]="cuadroCargo">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="salario">Salario:</label>
+        <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control"[(ngModel)]="cuadroSalario">
+      </div>
+      <div class="col">
+          <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 35px;">Agregar</button>
+      </div>
+    </form>
+  </div>
+</div>
+<br><br>
+<app-empleado-hijo-c *ngFor="let empleado of empleados; let i=index" [empleadoDeLista]="empleado" [indice]="i">
+</app-empleado-hijo-c>
+<!-- <div class="container">
+  <div class="row">
+    <div class="col">
+      <div *ngFor="let empleado of empleados; let i=index">
+       {{i+1}}: {{empleado.nombre}} {{empleado.apellido}} {{empleado.cargo}} {{empleado.salario}}
+      </div>
+    </div>
+  </div>  
+</div> -->
