--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,25 +2,27 @@
   <div class="col" style="text-align: center;">
     <h1>{{titulo}}</h1>
     <br><br>
-    <form class="form-group row">
+    <form class="form-group row" id="miform">
       <div class="form-group col-md-3">
         <label for="nombre">Nombre:</label>
-        <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre">
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre" #Nombre >
+        <!-- <div *ngIf="cuadroNombre.hasError('required')">Nombre es requerido</div> -->
+        <!-- <span ng-show="miform.nombre.$touched && miform.nombre.$invalid">The name is required.</span> -->
       </div>
       <div class="form-group col-md-3">
         <label for="apellido">Apellido:</label>
-        <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"[(ngModel)]="cuadroApellido">
+        <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"[(ngModel)]="cuadroApellido" #Apellido>
       </div>
       <div class="form-group col-md-3">
         <label for="cargo">Cargo:</label>
-        <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control"[(ngModel)]="cuadroCargo">
+        <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control"[(ngModel)]="cuadroCargo" #Cargo>
       </div>
       <div class="form-group col-md-3">
         <label for="salario">Salario:</label>
-        <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control"[(ngModel)]="cuadroSalario">
+        <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control"[(ngModel)]="cuadroSalario" #Salario>
       </div>
       <div class="col">
-          <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 35px;">Agregar</button>
+          <button type="submit" class="btn btn-primary" (click)="agregarEmpleado(Nombre,Apellido,Cargo,Salario)" style="margin-top: 35px;">Agregar</button>
       </div>
     </form>
   </div>
