--- a/src/app/caracteristicas-empleado-c/caracteristicas-empleado-c.component.html
+++ b/src/app/caracteristicas-empleado-c/caracteristicas-empleado-c.component.html
@@ -1,3 +1,3 @@
 <label for="item-input">Caracteristica:</label>
 <input type="text" #nuevaCaracteristica>
-<button type="button" (click)="agregarCaracteristicas(nuevaCaracteristica.value)" class="btn btn-primary">Añadir caracteristica</button>
+<button type="button" (click)="agregarCaracteristicas(nuevaCaracteristica.value,nuevaCaracteristica)" class="btn btn-primary">Añadir caracteristica</button>
