--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<nav class="navbar navbar-expand-sm bg-light">
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" routerLink="Home" href="#">Home</a></li>
+    <!-- <li class="nav-item"><a class="nav-link" routerLink="User" href="#">User</a></li> -->
+    <li class="nav-item"><a class="nav-link" routerLink="Proyectos" href="#">Proyectos</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="Quienes" href="#">Quienes Somos</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="Contacto" href="#">Contacto</a></li>
+  </ul>
+</nav>
+
 <div class="container">
   <div class="col" style="text-align: center;">
     <h1>{{titulo}}</h1>
@@ -30,6 +40,7 @@
 <br><br>
 <app-empleado-hijo-c *ngFor="let empleado of empleados; let i=index" [empleadoDeLista]="empleado" [indice]="i">
 </app-empleado-hijo-c>
+
 <!-- <div class="container">
   <div class="row">
     <div class="col">
