--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     <li class="nav-item"><a class="nav-link" routerLink="Contacto" href="#">Contacto</a></li>
   </ul>
 </nav>
-
-<div class="container">
+<router-outlet></router-outlet>
+<!-- <div class="container">
   <div class="col" style="text-align: center;">
     <h1>{{titulo}}</h1>
     <br><br>
@@ -16,8 +16,6 @@
       <div class="form-group col-md-3">
         <label for="nombre">Nombre:</label>
         <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre" #Nombre >
-        <!-- <div *ngIf="cuadroNombre.hasError('required')">Nombre es requerido</div> -->
-        <!-- <span ng-show="miform.nombre.$touched && miform.nombre.$invalid">The name is required.</span> -->
       </div>
       <div class="form-group col-md-3">
         <label for="apellido">Apellido:</label>
@@ -39,7 +37,7 @@
 </div>
 <br><br>
 <app-empleado-hijo-c *ngFor="let empleado of empleados; let i=index" [empleadoDeLista]="empleado" [indice]="i">
-</app-empleado-hijo-c>
+</app-empleado-hijo-c> -->
 
 <!-- <div class="container">
   <div class="row">
