--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -5,22 +5,22 @@
       <form class="form-group row">
         <div class="form-group col-md-3">
           <label for="nombre">Nombre:</label>
-          <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre">
+          <input type="text" name="nombre" id="nombre" placeholder="Nombre" class="form-control"[(ngModel)]="cuadroNombre" #Nombre>
         </div>
         <div class="form-group col-md-3">
           <label for="apellido">Apellido:</label>
-          <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"[(ngModel)]="cuadroApellido">
+          <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control"[(ngModel)]="cuadroApellido" #Apellido>
         </div>
         <div class="form-group col-md-3">
           <label for="cargo">Cargo:</label>
-          <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control"[(ngModel)]="cuadroCargo">
+          <input type="text" name="cargo" id="cargo" placeholder="Cargo" class="form-control"[(ngModel)]="cuadroCargo" #Cargo>
         </div>
         <div class="form-group col-md-3">
           <label for="salario">Salario:</label>
-          <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control"[(ngModel)]="cuadroSalario">
+          <input type="text" name="salario" id="salario" placeholder="Salario" class="form-control"[(ngModel)]="cuadroSalario" #Salario>
         </div>
         <div class="col">
-            <button type="submit" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 35px;">Agregar</button>
+            <button type="submit" class="btn btn-primary" (click)="agregarEmpleado(Nombre,Apellido,Cargo,Salario)" style="margin-top: 35px;">Agregar</button>
         </div>
       </form>
     </div>
