--- a/src/app/empleado-hijo-c/empleado-hijo-c.component.html
+++ b/src/app/empleado-hijo-c/empleado-hijo-c.component.html
@@ -2,7 +2,9 @@
     <div class="row">
       <div class="col">
         <div >
+          <a [routerLink]="['/Actualiza',indice]">
          {{indice+1}}: {{empleadoDeLista.nombre}} {{empleadoDeLista.apellido}} {{empleadoDeLista.cargo}} {{empleadoDeLista.salario}}
+        </a>
         </div>
         <app-caracteristicas-empleado-c (caracteristicasEmpleado)="agregarCaracteristica($event)"></app-caracteristicas-empleado-c>
         <ul style="list-style: none;">
